# gecko_sdk

./: .properties  gecko_sdk.slcs
app/bluetooth/: bluetooth_experimental_demos.xml  bluetooth_internal_demos.xml  bluetooth_production_demos.xml  esf.properties
app/bluetooth/component/: bt_hci_ext_adv_filter_rssi_uuid.slcc
app/bluetooth/documentation/: slBluetooth_docContent.xml
app/btmesh/: btmesh.properties  btmesh_internal_demos.xml  btmesh_production_demos.xml
app/btmesh/documentation/: btmesh-release-highlights.txt  slBtMesh_docContent.xml
app/common/: app_common.properties  platform_production_demos.xml
app/flex/: esf.properties  flex_demos_only_demos.xml  flex_production_demos.xml
app/flex/documentation/: release-highlights.txt  slFlex_docContent.xml
app/flex/example/example_host/rail_host_simple_rail_cpc_to_serial/: CMakeLists.txt  cpc_to_serial.c  makefile
app/mcu_example/: app_mcu.properties  mcu_production_demos.xml
app/mcu_example/documentation/: release-highlights.txt
app/wisun/: esf.properties  wisun_br_demos_demos.xml  wisun_production_demos.xml
app/wisun/documentation/: slWi-SUN_docContent.xml
app/zcl/: general.xml
platform/: release-highlights.txt
platform/common/inc/: sl_gsdk_version.h
platform/hwconf_data/: hwconfig.hwdata
platform/radio/mac/: lower-mac.h  (+4 more)
protocol/openthread/: esf.properties  openthread_production_demos.xml  openthread_production_templates.xml
protocol/z-wave/: esf.properties  important_changes.md  z-wave_production_demos.xml
protocol/zigbee/: esf.properties  zigbee_production_demos.xml
(+198 files in other folders)
